--- a/conandata.yml
+++ b/conandata.yml
@@ -5,5 +5,5 @@ repository: http://172.20.180.12:8050/yanfa4/third/sensors_analytics_sdk
 external_repository: https://github.com/CrealityOfficial/sensors_analytics_sdk
 description: sensors_analytics_sdk
 topics: sensors_analytics_sdk,sensors_analytics_sdk,sensors_analytics_sdk
-build_deps: zlib_static/1.0.0,curl/0.0.2
-search_deps: zlib_static/1.0.0,curl/0.0.2
+build_deps: zlib_static/1.0.0,curl_static/1.0.0
+search_deps: zlib_static/1.0.0,curl_static/1.0.0
